# itebd-loschmidt-dpt

./: .gitignore  README.md  analyse_a4.py  plot_a4.py  plot_extra.py  pyproject.toml  run_a4.py  run_a4_long.py
docs/: exam_prep.md  exam_prep.tex  phase0_svd.md  phase1_vidal.md  phase2_gates.md  phase3_tebd.md  phase4_5_results.md  report_a4.tex
results/: analysis_report.txt
results/data/: conv_h2.0_chi10.h5  conv_h2.0_chi20.h5  conv_h2.0_chi200.h5  conv_h2.0_chi5.h5  conv_h2.0_chi80.h5  scan_h0.5_chi40.h5  scan_h0.8_chi40.h5  scan_h0.8_chi80_long.h5  scan_h1.2_chi40.h5  scan_h1.5_chi40.h5  scan_h2.0_chi40.h5  scan_h2.0_chi80_dt0.025.h5  scan_h2.0_chi80_dt0.1.h5  scan_h3.0_chi40.h5
src/tns/: __init__.py  gates.py  io.py  simulate.py  svd_utils.py  tebd.py  transfer.py  vidal_state.py
tests/: test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4_5.py
