[project]
name = "tns-a4"
version = "0.1.0"
description = "Project A4: Loschmidt Echo and Dynamical Phase Transitions via iTEBD"
requires-python = ">=3.14"
dependencies = [
    "h5py>=3.16.0",
    "hatchling>=1.30.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pytest>=9.1.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tns"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
